2008-02-03  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c: removed the unused functions get_optionmenu_item
	and set_optionmenu_item

	* glade/prefs.glade: Use GtkEntry instead of the deprecated
	GnomeEntry.

2008-02-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/prefs.glade: Use GtkComboBox instead of the deprecated
	GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

	* src/prefs.c: Use GtkComboBox instead of the deprecated
	  GtkOptionMenu
	  - Use GtkFileChooserButton instead of the deprecated
	  GnomeFileEntry

2008-02-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/plugin_editor.glade: Use GtkFileChooserButton instead of
	the deprecated GnomeFileEntry in the edit plugin dialog.

	* src/plug-edit.c (edit_plugin_widgets_to_item)
	(edit_plugin_item_to_widgets, edit_plugin_clear_widgets)
	(edit_plugin_dialog_new): Use GtkFileChooserButton instead of the
	deprecated GnomeFileEntry in the edit plugin dialog.

	* glade/plugin.glade: Use GtkFileChooserButton instead of the
	deprecated GnomeFileEntry in the new plugin dialog

	* src/plug-in.c (new_plugin_create_cb): Use GtkFileChooserButton
	instead of the deprecated GnomeFileEntry in the new plugin dialog

2008-01-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c, src/dbus.c, src/dbus.h: Made the DBUS related code
	optional based on the defined WITH_DBUS flag.

	* src/Makefile.am (INCLUDES): Added -DWITH_DBUS to allow for
	optional compilation of DBUS related code.

	* configure.in: Added DBUS version checking and made DBUS support
	optional. (Fixes: #1802501)

2008-01-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: properly check for guile (Fixes #1027023)

2008-01-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/props-proj.c (prop_set): removed the unnecessary call
	to gtt_projects_tree_update_project_data

	* src/props-task.c (save_task_notes): removed the unnecessary call